last save did not have finished writeup

--- a/GridMassTest.ipynb
+++ b/GridMassTest.ipynb
@@ -568,7 +568,7 @@
     "\n",
     "This behavior was replicated with both larger and smaller values of $\\Sigma = 1$ and $\\Sigma = 1000$. \n",
     "\n",
-    "Perhaps the mass scaling is different and a mass of 4 when epsilon = 0 "
+    "Perhaps the mass scaling is different and a mass of 4 when epsilon = 0 is not the same of a mass of 4 when epsilon = 0.1, but is that enough to explain why there is any mass at all when epsilon is very high?"
    ]
   }
  ],
